Fix timeline spacing - add margin between content boxes and center line

--- a/themes/portfolio/static/css/style.css
+++ b/themes/portfolio/static/css/style.css
@@ -251,12 +251,12 @@ body {
 }
 
 .timeline-item:nth-child(odd) .timeline-content {
-    margin-right: 50%;
+    margin-right: calc(50% + 20px);
     padding-right: 40px;
 }
 
 .timeline-item:nth-child(even) .timeline-content {
-    margin-left: 50%;
+    margin-left: calc(50% + 20px);
     padding-left: 40px;
 }
 
